--- a/WildApricot Design/CSS customization.css
+++ b/WildApricot Design/CSS customization.css
@@ -279,12 +279,14 @@ border-bottom: 2px solid #C10013;
 
 
 /* Do not display author name in blog posts */
+
 span.postedByLabel
 {
   display: none
 }
 
 /* Display plain date */
+
 span.postedByLink
 {
   display: none
@@ -294,3 +296,29 @@ span.postedByLink
 {
   display: none;
 }
+
+
+/* Buttons Safari */
+/*input { */
+/*    -webkit-appearance: none;*/
+/*    -webkit-border-radius:0; */
+/*    border-radius:0;*/
+/*}*/
+
+.contStyleCaption
+{
+padding-left: 80px;
+}
+
+.contStylePromo
+{
+color: blue;
+font-size: 48px;
+}
+
+.WaGadgetOnly.WaGadgetContent.BoxLeftTop
+{
+background-color: #FF4D00;
+height: 200px;
+}
+
